# jogo_da_forca

./: .gitignore  .pdm-python  README.md  manage.py  pdm.toml  pyproject.toml  requirements.txt
Jogo_da_Forca/: asgi.py  settings.py  urls.py  wsgi.py
hangman/: admin.py  forms.py  models.py  urls.py  views.py
hangman/management/commands/: setup_groups.py
hangman/migrations/: 0001_initial.py  0002_aluno_alter_jogo_aluno.py  0003_palavra_professor.py  0004_remove_professor_user_alter_jogo_aluno_and_more.py  0005_remove_jogo_aluno_jogo_user.py
hangman/static/css/: jogo.css  relatorio.css  style.css
hangman/static/js/: script.js
hangman/templates/: atualizar_tema.html  base.html  cadaluno.html  cadastrar_palavra.html  cadastrar_tema.html  cadprofessor.html  index.html  jogo.html  listar_jogos.html  listar_professores.html  listar_temas.html  login.html  relatorio.html
hangman/templates/registration/: login.html  signup.html
static/css/: style.css
templates/: cadastrar_tema.html
